exports[`Button renders a basic button 1`] = `
<button
  className="cPyjKp">
  Click me
</button>
`;

exports[`Button renders a full width button 1`] = `
<button
  className="kTrUEX">
  Click me
</button>
`;

exports[`Button renders a full width button 2`] = `
<a
  className="jpUmnI">
  Click me
</a>
`;

exports[`Button renders a primary button 1`] = `
<button
  className="hwoZit">
  Click me
</button>
`;

exports[`Button renders a secondary button 1`] = `
<button
  className="hggFYC">
  Click me
</button>
`;

exports[`Button when "disabled" prop is supplied renders a disabled button 1`] = `
<button
  className="feplCa"
  disabled={true}>
  Click me
</button>
`;

exports[`LinkButton renders a basic link button 1`] = `
<a
  className="bMOQzN">
  Click me
</a>
`;

exports[`LinkButton renders a disabled link button 1`] = `
<a
  className="bqDpOh"
  disabled={true}>
  Click me
</a>
`;

exports[`LinkButton renders a full width link button 1`] = `
<a
  className="jpUmnI">
  Click me
</a>
`;

exports[`LinkButton renders a full width link button 2`] = `
<a
  className="jpUmnI">
  Click me
</a>
`;

exports[`LinkButton renders a primary link button 1`] = `
<a
  className="jhxkip">
  Click me
</a>
`;

exports[`LinkButton renders a secondary link button 1`] = `
<a
  className="jRkNFJ">
  Click me
</a>
`;
